<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmSignUpActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_code"
        />

    <EditText
        android:id="@+id/code_entry"
        android:hint="@string/enter_your_confirmation_code_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="012312..."
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        />

</LinearLayout>